<resources>

    <string name="app_name">Moca</string>

    <!-- Google Sign-in OAuth Client ID -->
    <string name="web_client_id">
        1005735982925-sbv91r9l3abe4dss11lcgeq3iud2rhq5.apps.googleusercontent.com
    </string>

    <!-- UserAuthActivity  -->
    <string name="user_auth_page_title"> Meetup &amp; Conference Aggregator </string>
    <string name="user_auth_page_subtitle">
        A free tool for you, that brings all your favorite meetups in one place
    </string>
    <string name="user_auth_page_btn_signin"> Sign In </string>

    <!-- ChooseTopicsActivity  -->
    <string name="choose_topics_page_title"> Choose the topics you love the most </string>
    <string name="choose_topics_page_subtitle"> Find curated content that matters the most to you </string>
    <string name="topic_android"> Android </string>
    <string name="topic_ios"> iOS </string>
    <string name="topic_web"> Web </string>
    <string name="topic_kotlin"> Kotlin </string>
    <string name="topic_java"> Java </string>
    <string name="topic_swift"> Swift </string>
    <string name="topic_python"> Python </string>
    <string name="topic_aiml"> AI/ML </string>
    <string name="topic_react"> React </string>
    <string name="topic_js"> JS </string>
    <string name="topic_vue"> Vue </string>
    <string name="topic_angular"> Angular </string>
    <string name="choose_topics_page_button"> Take Me In </string>

    <!-- Event List Item -->
    <string name="dummy_event_name">Mastering Kotlin</string>
    <string name="dummy_event_organiser_name">GDG MAD</string>
    <string name="dummy_event_date">Sat, Dec 19, 11:00</string>
    <string name="dummy_event_location">Online, Google Meet</string>
    <string name="dummy_event_desc">
        Agenda (IST): 04:00 PM - Exploring the future of Android UI with Jetpack Compose with Gurupreet Singh <br></br><br></br> Jetpack Compose is Android’s modern toolkit for building native UI. It simplifies and accelerates UI development on Android. Quickly bring your app to life with less code, powerful tools, and intuitive Kotlin APIs.<br></br><br></br> In this talk, we will be going through how far have we come with existing UI tools and what challenges it presented and why something like Jetpack Compose is needed.
        We will learn how Jetpack Compose accelerates Android App development by creating a complex app UI in a few lines of codes. While making app we will go through core concepts of Jetpack Compose and how it handles state management, rendering, performance and how Kotlin compliments compose.<br></br>
        At last, we will see how Compose can be adopted to our current projects and how soon we can be ready for production apps with Compose.<br></br><br></br>About the speaker: Gurupreet is an open-source enthusiast, Developer and Tech Entrepreneur. Currently, he's working at Delivery Hero as an Android Developer. Actively working currently in Jetpack Compose, Blockchain and Android development.
    </string>
    <string name="event_date_imageView_contentDesc">event_date_icon</string>
    <string name="event_location_imageView_contentDesc">event_location_icon</string>

    <!-- Tab Layout -->
    <string name="tab_item_interests">Interests</string>
    <string name="tab_item_recommended">Recommended</string>

    <!-- Home Activity -->
    <string name="app_logo_imageView_contentDesc">app_logo</string>
    <string name="profile_photo_imageView_contentDesc">profile_photo</string>
    <string name="add_event_fab_contentDesc">add_event_fab</string>

    <!-- Add Event Activity -->
    <string name="add_event_page_toolbar_title">Add Event</string>
    <string name="event_name_et_hint">Event Name</string>
    <string name="event_date_et_hint">Date</string>
    <string name="event_location_et_hint">Location</string>
    <string name="event_desc_et_hint">Event Description</string>
    <string name="add_event_page_btn">Add Event</string>

    <!-- Event Details Activity -->
    <string name="event_details_liveEvent">Event is live now</string>
    <string name="section_event_desc">Description</string>
    <string name="join_event_btn">Join Online Event</string>
</resources>