<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventActivity">

    <!-- TODO: Make the toolbar text white -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_event_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/moca_primary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_name_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_event_toolbar"
        app:startIconDrawable="@drawable/ic_event_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name_et_hint"
            tools:text="@string/dummy_event_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_date_til"
        app:startIconDrawable="@drawable/ic_event_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_name_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_date_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/dummy_event_date"
            android:hint="@string/event_date_et_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_location_til"
        app:startIconDrawable="@drawable/ic_event_location"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_date_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_location_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/dummy_event_location"
            android:hint="@string/event_location_et_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_desc_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/add_event_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_location_til"
        app:startIconDrawable="@drawable/ic_event_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_desc_editText"
            android:minLines="15"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_desc_et_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_event_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/moca_accent"
        android:text="@string/add_event_page_btn"
        android:textColor="@color/moca_accent_dark"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>