<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/event_item_cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/event_name"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                tools:text="@string/dummy_event_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/event_organiser_name"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                tools:text="@string/dummy_event_organiser_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_name" />

            <ImageView
                android:id="@+id/event_date_imageView"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_organiser_name"
                app:srcCompat="@drawable/ic_event_date"
                android:contentDescription="event_date" />

            <ImageView
                android:id="@+id/event_location_imageView"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_date_imageView"
                app:srcCompat="@drawable/ic_event_location"
                android:contentDescription="event_location" />

            <TextView
                android:id="@+id/event_date"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="@string/dummy_event_date"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/event_date_imageView"
                app:layout_constraintStart_toEndOf="@+id/event_date_imageView"
                app:layout_constraintTop_toTopOf="@+id/event_date_imageView" />

            <TextView
                android:id="@+id/event_location"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="@string/dummy_event_location"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/event_location_imageView"
                app:layout_constraintStart_toEndOf="@+id/event_location_imageView"
                app:layout_constraintTop_toTopOf="@+id/event_location_imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>